# Copyright (c) 2021-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

module_out_path = "distributed_input/sink_handler"

group("unittest") {
  testonly = true

  deps = [ ":distributed_input_sink_handler_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_sink_handler_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${distributedinput_path}/sinkhandler/include",
    "${innerkits_path}/include",
    "${innerkits_path}/src",
    "${ipc_path}/include",
    "${ipc_path}/src",
    "${services_sink_path}/sinkmanager/include",
    "${frameworks_path}/include",
    "${service_common}/include",
    "${common_path}/include",
    "${dfx_utils_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "${services_source_path}/inputinject/include",
    "${utils_path}/include",
  ]

  sources = [
    "${distributedinput_path}/sinkhandler/src/distributed_input_sink_handler.cpp",
    "${distributedinput_path}/sinkhandler/src/load_d_input_sink_callback.cpp",
    "${distributedinput_path}/sinkhandler/test/unittest/mock/mock_distributed_input_client.cpp",
    "distributed_input_sinkhandler_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004120",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${innerkits_path}:libdinput_sdk",
    "${utils_path}:libdinput_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_manager_service_test }}}
