# Copyright (c) 2023-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../../distributedinput.gni")

##############################fuzztest##########################################
ohos_fuzztest("DinputConfigDhFuzzTest") {
  module_out_path = fuzz_test_path

  fuzz_config_file =
      "${distributedinput_path}/test/fuzztest/dinputconfigdh_fuzzer"

  include_dirs = [
    "${av_transport_path}/common/include",
    "include",
    "${distributedinput_path}/interfaces/inner_kits/include",
    "${distributedinput_path}/interfaces/ipc/include",
    "${distributedinput_path}/services/source/sourcemanager/include",
    "${distributedinput_path}/services/sink/sinkmanager/include",
    "${distributedinput_path}/frameworks/include",
    "${distributedinput_path}/sourcehandler/include",
    "${distributedinput_path}/inputdevicehandler/include",
    "${distributedinput_path}/services/state/include",
    "${service_common}/include",
    "${common_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "${services_source_path}/inputinject/include",
    "${utils_path}/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "dinputconfigdh_fuzzer.cpp" ]

  deps = [ "${distributedinput_path}/sourcehandler:libdinput_source_handler" ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "libevdev:libevdev",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DinputConfigDhFuzzTest\"",
    "LOG_DOMAIN=0xD004120",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true

  deps = [ ":DinputConfigDhFuzzTest" ]
}
###############################################################################
