# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

##############################fuzztest##########################################
ohos_fuzztest("DinputPermissionCheckFuzzTest") {
  module_out_path = fuzz_test_path

  fuzz_config_file = "${distributedinput_path}/test/fuzztest/dinputpermissioncheck_fuzzer"

  include_dirs = [
    "${services_source_path}/transport/include",
    "${distributedinput_path}/services/transportbase/include",
    "${common_path}/include",
    "${service_common}/include",
    "${services_source_path}/inputinject/include",
    "${services_source_path}/transport/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${frameworks_path}/include",
    "${distributedinput_path}/inputdevicehandler/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [ "dinput_permission_check_fuzzer.cpp" ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${distributedinput_path}/services/transportbase:libdinput_trans_base",
    "${services_source_path}/inputinject:libdinput_inject",
    "${utils_path}:libdinput_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "device_manager:devicemanagersdk",
    "distributed_hardware_fwk:distributed_av_sender",
    "distributed_hardware_fwk:distributedhardwareutils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "libevdev:libevdev",
    "os_account:libaccountkits",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DinputPermissionCheckFuzzTest\"",
    "LOG_DOMAIN=0xD004120",
    "private=public",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true

  deps = [ ":DinputPermissionCheckFuzzTest" ]
}
###############################################################################
