# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

##############################fuzztest##########################################
ohos_fuzztest("DistributedInputSinkTransportFuzzTest") {
  module_out_path = "distributed_input/system"

  fuzz_config_file = "${distributedinput_path}/test/fuzztest/distributedinputsinktransport_fuzzer"

  include_dirs = [
    "${services_sink_path}/transport/include",
    "${distributedinput_path}/services/transportbase/include",
    "${common_path}/include",
    "${frameworks_path}/include",
    "${fwk_common_path}/log/include",
    "${fwk_common_path}/utils/include",
    "${fwk_interfaces_path}/include",
    "${fwk_utils_path}/include/log",
    "${fwk_utils_path}/include",
    "${service_common}/include",
    "//third_party/json/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "${services_sink_path}/transport/src/distributed_input_sink_switch.cpp",
    "${services_sink_path}/transport/src/distributed_input_sink_transport.cpp",
    "distributed_input_sink_transport_fuzzer.cpp",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${distributedinput_path}/services/transportbase:libdinput_trans_base",
    "${utils_path}:libdinput_utils",
    "//third_party/libevdev:libevdev",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "dsoftbus:softbus_client",
    "eventhandler:libeventhandler",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"DistributedInputSinkTransportFuzzTest\"",
    "LOG_DOMAIN=0xD004100",
  ]
}

###############################################################################
group("fuzztest") {
  testonly = true

  deps = [ ":DistributedInputSinkTransportFuzzTest" ]
}
###############################################################################
