# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

module_out_path = "distributed_input/utils"

group("unittest") {
  testonly = true

  deps = [ ":distributed_input_utils_test" ]
}

## UnitTest distributed_input_utils_test {{{
ohos_unittest("distributed_input_utils_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${av_transport_path}/common/include",
    "${utils_path}/include",
    "${utils_path}/test/unittest",
    "${common_path}/include",
    "${fwk_interfaces_path}/include",
    "${fwk_interfaces_path}/include/ipc",
    "${frameworks_path}/include",
    "${common_path}/test/mock",
    "${service_common}/include",
  ]

  sources = [
    "${common_path}/test/mock/socket_mock.cpp",
    "${common_path}/test/mock/softbus_bus_center_mock.cpp",
    "${distributedinput_path}/utils/src/dinput_context.cpp",
    "${distributedinput_path}/utils/src/dinput_utils_tool.cpp",
    "dinput_context_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004120",
  ]

  deps = [ "${utils_path}:libdinput_utils" ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "openssl:libcrypto_shared",
    "samgr:samgr_proxy",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_utils_test }}}
