# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../distributedinput.gni")

module_out_path = "distributed_input/state"

group("dinpusinkstatetest") {
  testonly = true

  deps = [ ":dinput_sink_state_test" ]
}

## UnitTest dinput_sink_state_test {{{
ohos_unittest("dinput_sink_state_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${common_path}/include",
    "${services_state_path}/include",
  ]

  sources = [ "dinput_sink_state_test.cpp" ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004120",
  ]

  deps = [ "${services_state_path}:libdinput_sink_state" ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "hilog:libhilog",
    "libevdev:libevdev",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest dinput_sink_state_test }}}
