# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import(
    "//foundation/distributedhardware/distributed_input/distributedinput.gni")

module_out_path = "distributed_input/trans_base"

group("transbaseunittest") {
  testonly = true

  deps = [ ":distributed_input_transbase_test" ]
}

## UnitTest distributed_input_manager_service_test {{{
ohos_unittest("distributed_input_transbase_test") {
  module_out_path = module_out_path

  include_dirs = [
    "${av_transport_path}/common/include",
    "${distributedinput_path}/services/source/transport/include",
    "${distributedinput_path}/services/sink/transport/include",
    "${distributedinput_path}/services/transportbase/include",
    "${common_path}/include",
    "${fwk_interfaces_path}/include",
    "${service_common}/include",
    "${services_source_path}/inputinject/include",
    "${dfx_utils_path}/include",
    "${utils_path}/include",
    "${frameworks_path}/include",
    "${distributedinput_path}/inputdevicehandler/include",
    "${distributedinput_path}/services/state/include",
    "${common_path}/test/mock",
    "${ipc_path}/include",
  ]

  sources = [
    "${common_path}/test/mock/socket_mock.cpp",
    "${common_path}/test/mock/softbus_bus_center_mock.cpp",
    "${distributedinput_path}/services/transportbase/src/distributed_input_transport_base.cpp",
    "${services_sink_path}/transport/src/distributed_input_sink_switch.cpp",
    "${services_sink_path}/transport/src/distributed_input_sink_transport.cpp",
    "${services_source_path}/transport/src/distributed_input_source_transport.cpp",
    "distributed_input_transbase_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  defines = [
    "HI_LOG_ENABLE",
    "DH_LOG_TAG=\"distributedinpututtest\"",
    "LOG_DOMAIN=0xD004120",
  ]

  deps = [
    "${dfx_utils_path}:libdinput_dfx_utils",
    "${innerkits_path}:libdinput_sdk",
    "${services_source_path}/inputinject:libdinput_inject",
    "${utils_path}:libdinput_utils",
  ]

  external_deps = [
    "c_utils:utils",
    "distributed_hardware_fwk:distributedhardwareutils",
    "distributed_hardware_fwk:libdhfwk_sdk",
    "eventhandler:libeventhandler",
    "hicollie:libhicollie",
    "hilog:libhilog",
    "hitrace:hitrace_meter",
    "ipc:ipc_core",
    "json:nlohmann_json_static",
    "libevdev:libevdev",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
}
## UnitTest distributed_input_manager_service_test }}}
